# rooze-api

./: Cargo.toml  openapi.yaml
.cargo/: config.toml
src/: api.rs  error.rs  main.rs  util.rs
src/api/: artist.rs  builder.rs  health.rs  map.rs  mod.rs  posts.rs  shop.rs  styles.rs  styles_api.rs
src/entity/: aftercare_signups.rs  artist_availability.rs  artist_booking_history.rs  artist_pricing.rs  artist_questionnaires.rs  artist_subscriptions.rs  artists.rs  artists_images.rs  artists_images_styles.rs  artists_styles.rs  booking_messages.rs  booking_questionnaire_responses.rs  booking_requests.rs  bookings.rs  business_hours.rs  cities.rs  client_match_impressions.rs  client_quiz_sessions.rs  county_boundaries.rs  error_logs.rs  image_style_llm_recommendations.rs  locations.rs  mod.rs  openai_api_costs.rs  prelude.rs  questionnaire_questions.rs  recurring_rules.rs  reddit_artists_pending.rs  reddit_scrape_cities.rs  scrape_actions.rs  sea_orm_active_enums.rs  state_boundaries.rs  styles.rs  styles_2.rs  subscription_tiers.rs  user_favorites.rs  users.rs
src/repository/: mod.rs  styles_repository.rs
src/repository/artist/: mod.rs  repository.rs  types.rs
src/repository/map/: mod.rs  repository.rs  types.rs
src/repository/posts/: mod.rs  repository.rs  types.rs
src/repository/shop/: mod.rs  repository.rs  types.rs
src/repository/styles/: mod.rs  repository.rs  styles_repository.rs  styles_types.rs  types.rs
src/service/: artist.rs  map.rs  mod.rs  posts.rs  shop.rs  styles.rs  styles_service.rs
